compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__echo_followed_by_no_expression_9.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  todo\n  |> { echo }\n  |> todo\n}\n"
---
----- SOURCE CODE

pub fn main() {
  todo
  |> { echo }
  |> todo
}


----- ERROR
error: Invalid echo use
  ┌─ /src/one/two.gleam:4:8
  │
4 │   |> { echo }
  │        ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
